# praxis

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  SECURITY.md  clippy.toml
.claude/: CLAUDE.md
.github/prompts/: automated-review.md
.github/workflows/: automated-review.yaml  benchmarks.yaml  codeql.yaml  conformance.yaml  container.yaml  coverage.yaml  documentation.yaml  fuzz.yaml  integration.yaml  issue-triage.yaml  microbenchmarks.yaml  msrv.yaml  nightly.yaml  publish.yaml  release.yaml  supply-chain.yaml  tests.yaml
benchmarks/microbenchmarks/: common.rs
benchmarks/src/scenario/: settings.rs  workload.rs
core/src/: errors.rs  memory.rs
core/src/config/: admin.rs  filters.rs  insecure_options.rs  listener.rs  mod.rs  parse.rs  runtime.rs
core/src/config/cluster/: health_check.rs  mod.rs
core/src/config/validate/: rules.rs
core/src/config/validate/cluster/: health_check.rs  tls.rs
core/src/config/validate/listener/: rules.rs  timeouts.rs
core/src/kv/: memory.rs  mod.rs
core/src/server/: pingora.rs
docs/: architecture.md  benchmarks.md  development.md  features.md  filters.md  proposals.md  release.md  security-hardening.md
docs/architecture/: crate-layout.md  diagram.html
docs/developing/: adding-filters.md
docs/filters/: README.md  extensions.md  reference.md
docs/filters/http/ai/: responses_proxy.md
docs/filters/http/observability/: access_log.md
docs/filters/http/payload_processing/: compression.md  json_body_field.md  json_rpc.md
docs/filters/http/security/: cors.md  credential_injection.md  csrf.md  forwarded_headers.md  ip_acl.md  policy.md
docs/filters/http/traffic_management/: circuit_breaker.md  endpoint_selector.md  grpc_detection.md  load_balancer.md  rate_limit.md  redirect.md  router.md  static_response.md  timeout.md
docs/filters/tcp/traffic_management/: tcp_load_balancer.md
docs/operating/: configuration.md  security-hardening.md
docs/proposals/: 00164-plugins.md  00210_response-based-token-counting.md  00214_token-usage-response-headers.md  00216_provider-token-mapping.md  00354_responses-api-filters.md  00358_http-callout-filter.md  00786_iterative-request-router.md
examples/: README.md
examples/configs/ai/anthropic/: request-validate.yaml
examples/configs/ai/openai/responses/: full-flow.yaml  response-store.yaml  responses-proxy.yaml
examples/configs/security/: cpex-policy.yaml  cpex.yaml  policy.yaml
examples/cpex-demo/: README.md  cpex.yaml  docker-compose.yml  mint-token.sh  praxis.yaml  restart.sh  verify-token-exchange.sh  walkthrough.sh
examples/cpex-demo/agent/: CHAT-WALKTHROUGH.md  chat.py  requirements.txt
examples/cpex-demo/hr-mcp-server/: Dockerfile  server.py
examples/cpex-demo/keycloak/: realm-export.json
examples/cpex-demo/scenarios/: 01-bob-allow.sh  02-alice-deny.sh  03-eve-redact.sh  04-alice-internal-allow.sh  05-alice-external-cedar-deny.sh  06-bob-apl-deny.sh  07-bob-pii-deny.sh  _lib.sh
filter/: Cargo.toml
filter/ext-proc/: Cargo.toml  build.rs
filter/ext-proc/src/: callout.rs  duplex.rs  lib.rs  mutations.rs  proto.rs  tests.rs
filter/src/: context.rs  lib.rs  registry.rs
filter/src/builtins/: mod.rs
filter/src/builtins/http/: mod.rs
filter/src/builtins/http/ai/: mod.rs
filter/src/builtins/http/ai/anthropic/: mod.rs
filter/src/builtins/http/ai/anthropic/validate/: config.rs  mod.rs  tests.rs
filter/src/builtins/http/ai/classifier/: mod.rs
filter/src/builtins/http/ai/openai/: mod.rs
filter/src/builtins/http/ai/openai/responses/: mod.rs  state.rs
filter/src/builtins/http/ai/openai/responses/proxy/: config.rs  mod.rs  tests.rs
filter/src/builtins/http/ai/openai/responses/store/: filter.rs  tests.rs
filter/src/builtins/http/ai/openai/responses/validate/: mod.rs
filter/src/builtins/http/ai/openai/sse/: config.rs  frame.rs  mod.rs
filter/src/builtins/http/ai/openai/sse/responses/: event.rs  mod.rs  parser.rs
filter/src/builtins/http/observability/: access_log.rs
filter/src/builtins/http/payload_processing/: body_parsing.rs  compression.rs  config_validation.rs
filter/src/builtins/http/security/: forwarded_headers.rs  ip_acl.rs  mod.rs
filter/src/builtins/http/security/cpex/: cmf.rs  config.rs  error.rs  factories.rs  filter.rs  json_rpc.rs  mod.rs  tests.rs
filter/src/builtins/http/security/credential_injection/: filter.rs
filter/src/builtins/http/security/csrf/: mod.rs  tests.rs
filter/src/builtins/http/security/guardrails/: config.rs  pii.rs
filter/src/builtins/http/security/policy/: common_message_format.rs  config.rs  error.rs  filter.rs  json_rpc.rs  mod.rs  tests.rs
filter/src/builtins/http/traffic_management/: endpoint_selector.rs  redirect.rs
filter/src/builtins/http/traffic_management/grpc_detection/: mod.rs
filter/src/builtins/http/traffic_management/rate_limit/: limiter.rs  mod.rs  tests.rs
filter/src/builtins/http/transformation/: path_sanitize.rs
filter/src/builtins/http/transformation/header/: mod.rs  ops.rs  tests.rs
filter/src/pipeline/: build.rs  checks.rs  evaluate.rs
protocol/src/http/pingora/: context.rs  convert.rs
protocol/src/http/pingora/handler/: mod.rs  no_body.rs  normalize.rs  via.rs  (+7 more)
protocol/src/tcp/: tls_setup.rs
server/: Cargo.toml  build.rs
server/src/: dump.rs  main.rs  reload.rs  server.rs
tests/integration/: Cargo.toml  build.rs
tests/integration/tests/suite/: body.rs  ext_proc.rs  main.rs  security.rs
tests/integration/tests/suite/adversarial/: header_smuggling.rs
tests/integration/tests/suite/examples/: anthropic_messages.rs  cpex.rs  ext_proc_endpoint_selector.rs  full_flow.rs  mod.rs  openai_response_store.rs  openai_responses_validate.rs  responses_proxy.rs
tests/resilience/tests/suite/: throughput_tcp.rs
tests/security/tests/suite/: cors_validation.rs  main.rs  ssrf_validation.rs
tests/utils/src/: proxy.rs
tls/src/: cached.rs  reload.rs  sni.rs  watcher.rs
tls/src/config/: certs.rs  listener.rs
tls/src/setup/: loader.rs  mod.rs  sni.rs
xtask/src/: echo.rs  filter_docs.rs
xtask/src/benchmark/: compare.rs  resolve.rs  visualize.rs
(+9 files in other folders)
