[workspace]
resolver = "3"
members = [
    # Praxis Main
    "server",

    # Praxis Proxy Framework
    "core",
    "filter",
    "filter/ext-proc",
    "protocol",
    "tls",

    # Praxis Developer Tooling
    "benchmarks",
    "xtask",

    # Praxis Testing
    "tests/schema",
    "tests/conformance",
    "tests/integration",
    "tests/resilience",
    "tests/security",
    "tests/utils",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.96"
authors = ["Shane Utt <shaneutt@linux.com>"]
license = "MIT"
repository = "https://github.com/praxis-proxy/praxis"

[workspace.dependencies]
arc-swap = "1.9.2"
async-trait = "0.1.89"
benchmarks = { path = "benchmarks" }
bytes = "1.12.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
cpex = { version = "0.2.0", features = ["jwt", "oauth", "pii", "audit", "cedar", "cel", "valkey"] }
clap = { version = "4.6.1", features = ["derive"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
dashmap = "6.2.1"
futures = "0.3.32"
h2 = "0.4.15"
http = "1.4.2"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
nix = { version = "0.31.3", default-features = false, features = ["process", "signal", "user"] }
notify = "8.2.0"
# Temporary fork: https://github.com/praxis-proxy/pingora
pingora-core = { version = "0.8.2", package = "quixotic-plecostomus-core", features = ["rustls"] }
pingora-http = { version = "0.8.2", package = "quixotic-plecostomus-http" }
pingora-proxy = { version = "0.8.2", package = "quixotic-plecostomus-proxy", features = ["rustls"] }
percent-encoding = "2.3.2"
praxis-ext-proc = { path = "filter/ext-proc", package = "praxis-proxy-ext-proc" }
prost = "0.14.4"
prost-build = "0.14.4"
prost-types = "0.14.4"
prost-wkt-types = { version = "0.7.1", features = ["vendored-protox"] }
protox = "0.9.1"
rand = "0.10.1"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "line_series"] }
quote = "1.0.46"
praxis = { path = "server", package = "praxis-proxy" }
praxis-core = { version = "0.4.0", path = "core", package = "praxis-proxy-core" }
praxis-filter = { version = "0.4.0", path = "filter", package = "praxis-proxy-filter" }
praxis-protocol = { version = "0.4.0", path = "protocol", package = "praxis-proxy-protocol" }
praxis-tls = { version = "0.4.0", path = "tls", package = "praxis-proxy-tls" }
praxis-test-utils = { path = "tests/utils" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
rcgen = "0.14.8"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rustls = "0.23.41"
rustls-pemfile = "2.2.0"
# NOTE: serde_yaml is deprecated; using yaml_serde (yaml.org maintained fork) as drop-in.
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
syn = { version = "2.0.118", features = ["full", "extra-traits", "visit"] }
sync_wrapper = "1.0.2"
tempfile = "3.27.0"
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.29.0"
thiserror = "2.0.18"
tikv-jemallocator = "0.7.0"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = { version = "0.14.6", features = ["transport"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
wiremock = "0.6.5"
zeroize = "1.9.0"

[profile.release]
codegen-units = 1
lto = true
overflow-checks = true
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = false

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
dead_code = "deny"
unsafe_code = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
unused_imports = "deny"
unused_variables = "deny"
# Cast safety
trivial_casts = "deny"
trivial_numeric_casts = "deny"
# Import hygiene
macro_use_extern_crate = "deny"
unused_extern_crates = "deny"
# Lifetime clarity
elided_lifetimes_in_paths = "deny"
single_use_lifetimes = "deny"
# Qualification hygiene
unused_qualifications = "deny"
# Macro hygiene
unused_macro_rules = "deny"
meta_variable_misuse = "deny"
# Drop safety
let_underscore_drop = "deny"
# Identifier safety
keyword_idents_2024 = "deny"
non_ascii_idents = "deny"
# Method call correctness
noop_method_call = "deny"
# Lifetime clarity (extended)
redundant_lifetimes = "deny"
# Debug trait coverage
# missing_debug_implementations: many types contain Box<dyn Trait> without Debug bounds
missing_debug_implementations = "allow"

[workspace.lints.clippy]
# Async and concurrency safety
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
future_not_send = "deny"
large_futures = "deny"
let_underscore_future = "deny"
let_underscore_must_use = "deny"
# Memory and allocation efficiency
assigning_clones = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
large_enum_variant = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
needless_pass_by_value = "deny"
rc_buffer = "deny"
str_to_string = "deny"
trivially_copy_pass_by_ref = "deny"
vec_init_then_push = "deny"
# API design
return_self_not_must_use = "deny"
# Documentation
doc_markdown = "deny"
missing_docs_in_private_items = "deny"
# Allowed: blank line after attributes is intentional style
empty_line_after_outer_attr = "allow"
# Idiomatic Rust
checked_conversions = "deny"
cloned_instead_of_copied = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
flat_map_option = "deny"
from_iter_instead_of_collect = "deny"
manual_assert = "deny"
manual_instant_elapsed = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
map_unwrap_or = "deny"
redundant_closure_for_method_calls = "deny"
ref_patterns = "deny"
set_contains_or_insert = "deny"
try_err = "deny"
unnecessary_get_then_check = "deny"
unnested_or_patterns = "deny"
# Borrow hygiene
needless_borrow = "deny"
# Code clarity
if_not_else = "deny"
match_bool = "deny"
match_same_arms = "deny"
mut_mut = "deny"
needless_for_each = "deny"
range_plus_one = "deny"
redundant_else = "deny"
semicolon_if_nothing_returned = "deny"
uninlined_format_args = "deny"
unreadable_literal = "deny"
unseparated_literal_suffix = "deny"
unused_self = "deny"
# Import hygiene
enum_glob_use = "deny"
wildcard_imports = "deny"
# String handling
string_add_assign = "deny"
string_slice = "deny"
# Function size
too_many_lines = "deny"
# Dev hygiene
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
# Cast safety
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
ptr_as_ptr = "deny"
# Documentation completeness
missing_errors_doc = "deny"
missing_panics_doc = "deny"
# Dead code detection
unused_async = "deny"
unnecessary_wraps = "deny"
needless_pass_by_ref_mut = "deny"
no_effect_underscore_binding = "deny"
used_underscore_binding = "deny"
# API hygiene
option_option = "deny"
ref_option_ref = "deny"
default_trait_access = "deny"
expl_impl_clone_on_copy = "deny"
# Code clarity
items_after_statements = "deny"
macro_use_imports = "deny"
multiple_inherent_impl = "deny"
needless_continue = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_functions_in_if_condition = "deny"
same_name_method = "deny"
stable_sort_primitive = "deny"
string_add = "deny"
string_lit_as_bytes = "deny"
trait_duplication_in_bounds = "deny"
type_repetition_in_bounds = "deny"
verbose_bit_mask = "deny"
zero_sized_map_values = "deny"
# Boolean hygiene
fn_params_excessive_bools = "deny"
struct_excessive_bools = "deny"
# Complexity (thresholds in clippy.toml)
cognitive_complexity = "deny"
too_many_arguments = "deny"
# Safety and correctness
unwrap_used = "deny"
missing_assert_message = "deny"
infinite_loop = "deny"
map_err_ignore = "deny"
or_fun_call = "deny"
clone_on_ref_ptr = "deny"
debug_assert_with_mut_call = "deny"
collection_is_never_read = "deny"
rc_mutex = "deny"
significant_drop_in_scrutinee = "deny"
mutex_integer = "deny"
mutex_atomic = "deny"
zombie_processes = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
significant_drop_tightening = "warn"
# Diagnostic hygiene (deny: a proxy must not panic)
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
# String handling (extended)
# string_to_string removed in recent clippy (covered by implicit_clone)
# Redundancy
redundant_type_annotations = "deny"
needless_raw_strings = "deny"
needless_raw_string_hashes = "deny"
# Idiomatic Rust (extended)
inconsistent_struct_constructor = "deny"
match_wildcard_for_single_variants = "deny"
single_match_else = "deny"
empty_drop = "deny"
manual_clamp = "deny"
# Safety documentation
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
# Restriction: no placeholder macros in production
todo = "deny"
unimplemented = "deny"
# Restriction: don't silently discard errors
unused_result_ok = "deny"
# Restriction: proxy must use graceful shutdown
exit = "deny"
# Restriction: prevent resource leaks
mem_forget = "deny"
# Restriction: trait import hygiene
unused_trait_names = "deny"
# Restriction: enforce descriptive error type names
error_impl_error = "deny"
# Restriction: unit structs use semicolons
empty_structs_with_brackets = "deny"
# Restriction: tests must live in #[cfg(test)] modules
tests_outside_test_module = "deny"
# Restriction: no SAFETY comments on safe code
unnecessary_safety_comment = "deny"
# Restriction: catch renamed trait method parameters
renamed_function_params = "deny"
# Restriction: prefer .then_some() / .then()
if_then_some_else_none = "deny"
# Restriction: avoid intermediate allocations
format_push_string = "deny"
# Restriction: use .as_slice() not &v[..]
deref_by_slicing = "deny"
# Restriction: catch inexact float literals
lossy_float_literal = "deny"
# Restriction: no semicolons in single-expression blocks
semicolon_inside_block = "deny"
# Restriction: enforce clippy.toml method blocklist
disallowed_methods = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
redundant_explicit_links = "deny"
unescaped_backticks = "deny"
bare_urls = "deny"
invalid_html_tags = "deny"
missing_crate_level_docs = "deny"
private_doc_tests = "allow"
