[package]
name = "praxis-proxy-filter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Filter pipeline engine and built-in filters for Praxis"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = true

[lib]
name = "praxis_filter"

[features]
default = ["ai-inference"]
ai-inference = ["dep:sqlx"]
ext-proc = ["dep:praxis-proto", "dep:tonic", "dep:prost-wkt-types"]
# CPEX policy filter — multi-source identity, APL routes, delegation,
# PII detection, audit, and body rewriting. The CPEX runtime + the APL
# plugin set come in via the optional `apl-*` and `cpex-core` deps;
# `tokio` drives plugin init.
cpex = [
    "dep:apl-audit-logger",
    "dep:apl-core",
    "dep:apl-cpex",
    "dep:apl-delegator-oauth",
    "dep:apl-identity-jwt",
    "dep:apl-pdp-cedar-direct",
    "dep:apl-pii-scanner",
    "dep:cpex-core",
    "dep:tokio",
]

[lints]
workspace = true

[dependencies]
apl-audit-logger = { workspace = true, optional = true }
apl-core = { workspace = true, optional = true }
apl-cpex = { workspace = true, optional = true }
apl-delegator-oauth = { workspace = true, optional = true }
apl-identity-jwt = { workspace = true, optional = true }
apl-pdp-cedar-direct = { workspace = true, optional = true }
apl-pii-scanner = { workspace = true, optional = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cpex-core = { workspace = true, optional = true }
dashmap = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
praxis-core = { workspace = true }
praxis-proto = { workspace = true, optional = true }
rand = { workspace = true }
prost-wkt-types = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
# Optional under the `cpex` feature — used to drive plugin `initialize()`
# at filter construction (the praxis filter-factory signature is sync,
# so we block on a single-thread runtime). Extra features (time, net)
# let JWT identity plugins fetch JWKS at init time.
tokio = { workspace = true, optional = true, features = ["rt", "time", "net"] }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
# `--features cpex` tests mint HS256 JWTs, write transient policy YAML
# files, and construct `RawDelegatedToken` instances directly (which
# requires a `chrono::DateTime<Utc>` for `expires_at`). Always-on in
# test builds (overhead is small) so the `cpex` feature does not need
# to gate dev-deps.
chrono = { workspace = true }
jsonwebtoken = "9"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
