[package]
name = "praxis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Cloud and AI-native proxy server"
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[lib]
name = "praxis"
path = "src/lib.rs"

[[bin]]
name = "praxis"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
notify = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
praxis-protocol = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
tikv-jemallocator = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["ai-inference"]
ai-inference = ["praxis-filter/ai-inference", "praxis-protocol/ai-inference"]
ext-proc = ["praxis-filter/ext-proc"]
cpex = ["praxis-filter/cpex"]

