[package]
name = "praxis-tests-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "../../README.md"
publish = false

[features]
default = ["ai-inference"]
ai-inference = ["praxis-filter/ai-inference"]
cpex = ["praxis-filter/cpex"]
no-mac-cert-rotation-tests = [] # We use this to disable testing cert rotation on macOS

[lints]
workspace = true

[dev-dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
praxis-protocol = { workspace = true }
praxis-test-utils = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
