[package]
name = "praxis-tests-integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "../../README.md"
publish = false

[features]
default = ["ext-proc"]
cpex-policy-engine = ["praxis-filter/cpex-policy-engine"]
ext-proc = ["praxis/ext-proc"]
no-mac-cert-rotation-tests = [] # We use this to disable testing cert rotation on macOS

[lints]
workspace = true

[dev-dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
# Used only by the cpex example test to mint HS256 JWTs for the
# happy-path case (matches the filter crate's signing dependency).
jsonwebtoken = "10.4.0"
praxis = { version = "0.4.0", path = "../../server", package = "praxis-proxy" }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
praxis-protocol = { workspace = true }
praxis-test-utils = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-wkt-types = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }
